--- a/manon-website/package.json
+++ b/manon-website/package.json
@@ -17,6 +17,7 @@
     "leva": "^0.9.18",
     "moment": "^2.29.1",
     "mongoose": "^6.1.6",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "react": "^17.0.2",
