--- a/manon-website/package.json
+++ b/manon-website/package.json
@@ -14,20 +14,25 @@
     "dotenv": "^14.1.0",
     "framer-motion": "^5.5.7",
     "http": "0.0.1-security",
+    "install": "^0.13.0",
     "leva": "^0.9.18",
     "moment": "^2.29.1",
     "mongoose": "^6.1.6",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "npm": "^8.5.0",
     "passport": "^0.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-page-scroll": "^0.1.3",
     "react-icons": "^4.3.1",
+    "react-page-scroller": "^2.2.1",
+    "react-parallax": "^3.3.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-scroll-parallax": "^3.0.3",
     "react-spring": "^9.4.1",
-    "sass": "^1.47.0",
     "socket.io": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
@@ -58,9 +63,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {
-    "node-sass": "^7.0.1"
-  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.49.7"
+  }
 }
